# HARMONIA-NETWORK

./: .gitignore  ABLETON_TROUBLESHOOTING.md  ARCHITECTURE.md  AUTOGAIN_BUG_FIX.md  AU_VST3_PLUGIN_REGISTRATION_GUIDE.md  BUILD.md  CHANGELOG.md  CMakeLists.txt  Final Lap.md  OOP_REFACTORING_ANALYSIS.md  QUICKSTART.md  README.md  REFACTORING_PLAN.md  REFACTORING_REPORT.md  RELEASE_README.md  SECURITY_PATCHES.md  THERMAL_ANALYSIS_COMPLETE.md  auval_report.txt  build_cohera_tests_build.txt  build_cohera_tests_build2.txt  build_cohera_tests_build3.txt  build_cohera_tests_build4.txt  build_cohera_tests_build5.txt  build_cohera_tests_build6.txt  build_cohera_tests_build7.txt  build_dev.sh  build_log.txt  build_log_2.txt  build_plugin.sh  build_release.sh  check_plugins.sh  cmake_review.txt  deep_clean_ableton.sh  fix_ableton.sh  install_plugin.sh  install_release_plugins.sh  pluginval_report.txt  run_tests.sh  simple_ducking_test  simple_ducking_test.cpp  (+21 more)
.github/: copilot-instructions.md
.github/workflows/: build.yml
Action plan/: ACTION_PLAN.md  AUDIT_SUMMARY_RU.md  COMPREHENSIVE_AUDIT.md  PRODUCTION_READINESS_REPORT.md
Code Optimization/: 00_COMMIT_SUMMARY.md  01_INITIAL_AUDIT.md  02_USER_FEEDBACK_CRITICAL_ADDITIONS.md  03_MASTER_REFACTORING_PLAN.md  README.md
archive/: DeadCodeHunter.cpp  DeltaMonitor.h  SmartReactorKnob.h  TopBar.h  TransferFunctionDisplay.h
archive/src 3/: PluginProcessor.cpp.backup2
archive/src 3/FIR/: FilterBank.cpp  fir_coeffs_multi_sr.h  fir_minphase_128.h
archive/src 3/analyzer/: AnalyzerPipelineConfig.h
archive/src 3/dsp/: DynamicsRestorer.h  Envelope.h  FilterBank.cpp  FilterBank.h  SidechainNormalizer.h
archive/src 3/ui/: LookAndFeel.h
src/: CoheraTypes.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  new_processBlock.cpp
src 3/: Main.cpp  PluginProcessor.cpp.backup  final_processBlock.cpp
src 3/dsp/: AutoGainStage.h
src 3/network/: NetworkManager.cpp
src/FIR/: FilterBank.cpp  FilterBank.h  fir_coeffs.h  fir_coeffs_multi_sr.h
src/dsp/: AutoGainStage.h  DCBlocker.h  Envelope.h  FilterBank.cpp  FilterBank.h  HarmonicEntropy.h  InteractionEngine.h  MSMatrix.h  MathSaturator.h  NoiseBreather.h  PsychoAcousticGain.h  StereoFocus.h  StereoVariance.h  ThermalModel.h  TransientDetector.h  TransientSplitter.h  VoltageRegulator.h  Waveshaper.h
src/engine/: AnalogModelingEngine.h  BandProcessingEngine.h  BandProcessingEngineNew.h  FilterBankEngine.h  MixEngine.h  ProcessingEngine.h  SaturationEngine.h  TransientEngine.h
src/network/: INetworkManager.h  MockNetworkManager.h  NetworkController.h  NetworkManager.h
src/parameters/: ParameterManager.h  ParameterSet.h
src/tests/: BasicSignalFlowTest.cpp  ComprehensiveParameterTests.cpp  DAWSimulationTest.cpp  DCBlockerSampleRateTest.cpp  DeadCodeHunter.cpp  EngineIntegrationTests.cpp  FrequencyBalanceTest.cpp  HarmonicAnalysisTest.cpp  IndustryStandardTestRunner.cpp  IndustryStandardTests.cpp  MultiSampleRateTest.cpp  NullPhaseInversionTest.cpp  RealWorldScenarios.cpp  SaturationDiagnostics.cpp  SimpleTestRunner.cpp  TestAudioGenerator.h  TestHelpers.h  TestRunner.cpp
src/ui/: CoheraLookAndFeel.h  ControlGroup.h  SimpleFFT.h  SpectrumVisor.h
src/ui/Components/: EnergyLink.h  InteractionMeter.h  NetworkBrain.h  ReactorKnob.h  SaturationCore.h  SpectrumVisor.h
src/ui/visuals/: AbstractVisualizer.h  AnalogNoise.h  BioScanner.h  CosmicDust.h  DigitalArtifacts.h  GlitchOverlay.h  HeadsUpDisplay.h  HorizonGrid.h  LivingBackground.h  NebulaShaper.h  NeuralLink.h  PlasmaCore.h  ScreenShaker.h  TechDecor.h  TextureOverlay.h  TransferFunctionDisplay.h
src/utils/: TrackAudioFifo.h
tests/: stress_test.cpp
tests/regression/: AudioComparator.h  FINAL_BUILD.md  FINAL_POLISH.md  OPTIMIZATION_COMPLETE.md  OPTIMIZATION_SUMMARY.md  PLATFORM_VALIDATION.md  PLUGINVAL_VALIDATION.md  README.md  STRESS_TESTING.md  SignalGenerator.h  TEST_PLAN.md  WEEK_0A_DAY1_REPORT.md  WEEK_0A_DAY2_COMPLETE.md  WEEK_0B_COMPLETE.md  WEEK_1_COMPLETE.md  WEEK_2_COMPLETE.md  WEEK_3_COMPLETE.md  WEEK_3_CRITICAL_FIXES.md  WEEK_3_DAY_1.md  WEEK_3_DAY_2.md  generate_instrument_signals.cpp  generate_reference_audio.cpp  generate_test_signals.cpp  process_test_signals.cpp  test_audio_regression.cpp
tests/regression/presets/: default.xml  extreme_drive.xml  full_mojo.xml  network_active.xml
